--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -8,6 +8,9 @@
 
 <!-- {{ partial "text-and-image" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Read more" "buttonLink" "/values") }} -->
 
+{{ partial "map" }}
+
+
 <!-- {{ partial "blog" . }} -->
 
 {{ end }}
