--- a/site/layouts/partials/contact.html
+++ b/site/layouts/partials/contact.html
@@ -1,5 +1,5 @@
 <div class="ph3 bg-grey-1 pv5">
-	<div class="ph3 mw7 center">
+	<div data-aos="fade-right" class="ph3 mw7 center">
 		<h2 class="f2 b lh-title mb2">{{.titoloContatti}}</h2>
 			{{ range .contatti }}
 			<div class="fl w-100 w-33-ns pa2">
