--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -6,7 +6,7 @@
     <div class="flex-ns mhn2-ns mb3">
       {{ range .products }}
       
-      <div class="ph2-ns w-50-ns pv5 tc white f3 cover pa2" style="background-image: url({{.image}})">
+      <div data-aos="fade-right" class="ph2-ns w-50-ns pv5 tc white f3 cover pa2" style="background-image: url({{.image}})">
         <!-- <img src="{{.image}}" alt="" class="center db mb3" style="width: 240px"> -->
         <h4 class="f4" style="background-color: rgba(91, 140, 90, 0.5);">{{.text}}</h4>
       </div>
