Fixed preview + logo

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,8 +1,8 @@
 <nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
 
 	<!-- Logo -->
-	<a href="/" class="pa2 db mr4 pl2 h-100 flex-none">
-		<img src="/img/logo.png" alt="Le Piante di Ferdinando" class="br0 mb0 w-2" style="width: 60px;"/>
+	<a href="/" class="pa2 db mr4 pl3 h-100 flex-none">
+		<img src="/img/logo-con-testo.png" alt="Le Piante di Ferdinando" class="br0 mb0 w-2" style="width: 170px;"/>
 	</a>
 
 	<!-- Primary Nav -->
