--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -26,7 +26,7 @@
 			</div> -->
 
 			<div>
-				<img src="/img/logo.png" alt="Le Piante di Ferdinando" class="br0 db mb0 w-100">
+				<img src="/img/logo.png" alt="Le Piante di Ferdinando" class="br0 db mb0-ns mb3  w-100-ns w-1 ">
 			</div>
 
 			<div>
