--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -2,7 +2,7 @@
 
 	<!-- Logo -->
 	<a href="/" class="pa2 db mr4 pl3 h-100 flex-none">
-		<img src="/img/logo-con-testo2.png" alt="Le Piante di Ferdinando" class="br0 mb0 w-2" style="width: 170px;"/>
+		<img src="/img/orto_laurentino_logo.png" alt="Orto Laurentino" class="br0 mb0 w-2" style="width: 170px;"/>
 	</a>
 
 	<!-- Primary Nav -->
