--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -17,6 +17,16 @@
   <script>
     AOS.init();
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164649101-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-164649101-1',{ 'anonymize_ip': true });
+  </script>
+
   {{ end }}
 </body>
 
