--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <head>
 
-	<title>{{ .Title }} | {{ $.Site.Title }}</title>
+	<title>Orto Laurentino | {{ $.Site.Title }}</title>
 
 	{{ $stylesheet := .Site.Data.webpack.main }}
 	{{ with $stylesheet.css }}
