--- a/site/layouts/partials/contact.html
+++ b/site/layouts/partials/contact.html
@@ -14,7 +14,7 @@
 				<p class="mb0">{{.linea1}}</p>
 				<p class="mb0">{{.linea2}}</p>
 
-				{{ with .linea3 }}
+				{{ if .linea3 }}
 				<p>{{.linea3}}</p>
 				{{ end }}
 
