Disattivato icone social

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -30,18 +30,22 @@
 			</div>
 
 			<div>
-					<h3 class="f4 b lh-title mb2 primary tl">Info utili</h3>
-					<ul class="mhn2 tl">
-					    <a style="text-decoration: none" href="https://www.iubenda.com/privacy-policy/89963761">Privacy Policy</a>
-					</ul>
-				</div>
+				<h3 class="f4 b lh-title mb2 primary tl">Info utili</h3>
+				<ul class="mhn2 tl">
+					<a style="text-decoration: none" href="https://www.iubenda.com/privacy-policy/89963761">Privacy
+						Policy</a>
+				</ul>
+			</div>
 
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
-				<ul class="mhn2">
+				<ul class="mhn2 tl">
+					<p>Coming soon...</p>
+				</ul>
+				<!-- <ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
-				</ul>
+				</ul> -->
 			</div>
 
 		</div>
