Aggiunto link facebook

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -39,13 +39,13 @@
 
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
-				<ul class="mhn2 tl">
+				<!-- <ul class="mhn2 tl">
 					<p>Coming soon...</p>
-				</ul>
-				<!-- <ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
 				</ul> -->
+				<ul class="mhn2">
+					{{ partial "social-icon" (dict "link" "https://www.facebook.com/Orto-Laurentino-111580033928093" "svg" "icons-facebook") }}
+					<!-- {{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }} -->
+				</ul>
 			</div>
 
 		</div>
